# galera

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: Dockerfile  ci.yml  docker-unstable.yml
galera-cli/: Cargo.toml
galera-cli/src/: main.rs
migrations/2021-04-04-080311_create_user/: up.sql
migrations/2021-04-04-080317_create_folder/: down.sql  up.sql
migrations/2021-04-04-080323_create_album/: down.sql  up.sql
migrations/2021-04-04-080323_create_media/: up.sql
migrations/2021-04-04-080329_create_album/: up.sql
migrations/2021-04-04-080329_create_album_invite/: up.sql
migrations/2021-04-04-080344_create_album_invite/: down.sql  up.sql
migrations/2021-04-04-080344_create_media/: up.sql
migrations/2021-04-04-080344_create_photo/: down.sql  up.sql
migrations/2021-04-04-080351_create_favorite_media/: down.sql  up.sql
migrations/2021-04-04-080351_create_favourite_photo/: down.sql  up.sql
migrations/2021-09-21-080300_album_media/: down.sql  up.sql
migrations/2021-11-07-160911_create_auth_refresh_token/: down.sql  up.sql
migrations/2021-11-09-213709_create_auth_access_token/: down.sql  up.sql
migrations/2022-02-20-104800_create_album_share_link/: down.sql  up.sql
migrations/2026-01-11-180810_create_oidc_identity/: down.sql  up.sql
migrations/2026-01-20-211801-0000_set_created_at_defaults/: down.sql  up.sql
migrations/2026-01-20-215745-0000_media_date_taken_null/: down.sql  up.sql
migrations/2026-02-13-140926-0000_add_uuid_to_user/: down.sql  up.sql
src/: auth.rs  checksum.rs  config.rs  cookies.rs  directories.rs  main.rs  models.rs  oidc.rs  openapi.rs  schema.rs
src/auth/: login.rs  mixed_auth.rs  mod.rs  secret.rs  shared_album_link.rs  token.rs
src/db/: albums.rs  folders.rs  general.rs  media.rs  mod.rs  oidc.rs  tokens.rs  users.rs
src/handlers/: mod.rs
src/routes/: albums.rs  media.rs  mod.rs  oidc.rs
src/scan/: mod.rs
