[package]
name = "galera"
version = "0.1.0"
authors = ["Ondřej Pešek <iTzBoboCz@users.noreply.github.com>"]
edition = "2024"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web server
axum = { version = "0.8.8" }
axum-extra = { version = "0.12.5", features = ["typed-routing", "typed-header"] }

# Database
deadpool = { version = "0.12.3", features = ["rt_tokio_1", "serde", "managed" ] }
deadpool-diesel = { version = "0.6.1", features = ["serde","rt_tokio_1"] }
diesel = { version = "2.3.5", features = ["mysql", "chrono"] }
diesel_migrations = "2.3.1"

# Logging
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Openapi
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Validation
email_address = "0.2.9"
lazy-regex = "3.5.1"

# Media
infer = "0.19.0"
imagesize = "0.14.0"

# Utilities
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4.43", default-features = false, features = ["serde", "std"] }
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
rand = "0.9.2"
sha2 = "0.10.9"
anyhow = "1.0.100"
directories = "6.0.0"
nanoid = "0.4.0"
sys-info = "0.9.1"
walkdir = "2.5.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "net", "io-util" ] }
tokio-util = { version = "0.7.18", default-features = false, features = ["io"]}
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
openidconnect = "4.0.1"
dashmap = "6.1.0"

[dev-dependencies]

# [workspace]
# members = [
#   "galera-cli",
# ]
