[package]
name = "galera"
version = "0.1.0"
authors = ["Ondřej Pešek <iTzBoboCz@users.noreply.github.com>"]
edition = "2024"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web server
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["typed-routing", "typed-header", "cookie"] }

# Database
deadpool = { version = "0.12", features = ["rt_tokio_1", "serde", "managed" ] }
deadpool-diesel = { version = "0.6", features = ["serde","rt_tokio_1"] }
diesel = { version = "2.3", features = ["mysql", "chrono"] }
diesel_migrations = "2.3"

# Logging
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Openapi
utoipa = { version = "5.4", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Validation
email_address = "0.2"
lazy-regex = "3.6"

# Media
infer = "0.19"
imagesize = "0.14"

# Utilities
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
time = "0.3"
uuid = { version = "1.20", features = ["v4"] }
jsonwebtoken = { version = "10.3", default-features = false, features = ["rust_crypto"]}
rand = "0.10"
sha2 = "0.10"
anyhow = "1.0"
thiserror = "2.0"
directories = "6.0"
nanoid = "0.4"
sys-info = "0.9"
walkdir = "2.5"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "fs", "net", "io-util" ] }
tokio-util = { version = "0.7", default-features = false, features = ["io"]}
tower-http = { version = "0.6", features = ["trace"] }
openidconnect = "4.0"
dashmap = "6.1"

[dev-dependencies]

# [workspace]
# members = [
#   "galera-cli",
# ]
